# DeckyPad

./: main.py  package-lock.json  plugin.json  pyproject.toml
shell/: onBind.sh  onUnbind.sh
