[tool.poetry]
name = "deckypad"
version = "0.1.0"
description = ""
authors = ["Alexander Makarov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
asyncio = "^3.4.3"
configparser = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
